style: configurações finais de fonte

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       }        
     </script>      
   </head>
-  <body class="font-sans antialiased bg-gray-100 dark:bg-gray-900 text-gray-600 dark:text-gray-400">
+  <body class="font-montserrat antialiased bg-gray-100 dark:bg-gray-900 text-gray-600 dark:text-gray-400">
     <script>
         if (localStorage.getItem('sidebar-expanded') == 'true') {
             document.querySelector('body').classList.add('sidebar-expanded');
